<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.antang.myexpense.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_edit_expense"
        android:name="com.antang.myexpense.ui.edit.EditExpenseFragment"
        android:label="@string/menu_add_expense"
        tools:layout="@layout/fragment_edit_expense" >
        <action
            android:id="@+id/action_nav_edit_expense_to_nav_edit_account"
            app:destination="@id/nav_edit_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_view_expense"
        android:name="com.antang.myexpense.ui.view.ViewExpenseFragment"
        android:label="@string/menu_view_expense"
        tools:layout="@layout/fragment_view_expenses" />

    <fragment
        android:id="@+id/nav_sync"
        android:name="com.antang.myexpense.ui.sync.SyncFragment"
        android:label="@string/menu_sync"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.antang.myexpense.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_edit_account"
        android:name="com.antang.myexpense.ui.edit.EditAccountFragment"
        android:label="@string/menu_edit_account"
        tools:layout="@layout/fragment_edit_account" />
</navigation>