<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:padding="@dimen/item_view_padding"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/tv_date_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_view_margin"
            android:background="@drawable/widget_bg_radius_ligth_yellow"
            android:text="@string/date_format"
            app:layout_constraintBottom_toBottomOf="@id/tv_date_text"
            app:layout_constraintStart_toEndOf="@id/tv_date_text"
            app:layout_constraintTop_toTopOf="@id/tv_date_text" />

        <TextView
            android:id="@+id/tv_time_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_view_margin"
            android:text="@string/text_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_date_text"
            app:layout_constraintStart_toEndOf="@id/tv_date"
            app:layout_constraintTop_toTopOf="@id/tv_date_text" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_view_margin"
            android:background="@drawable/widget_bg_radius_ligth_yellow"
            android:text="@string/time_format"
            app:layout_constraintBottom_toBottomOf="@id/tv_date_text"
            app:layout_constraintStart_toEndOf="@id/tv_time_text"
            app:layout_constraintTop_toTopOf="@id/tv_date_text" />

        <TextView
            android:id="@+id/tv_amount_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_text" />


        <EditText
            android:id="@+id/tv_amount"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/item_view_margin"
            android:background="@drawable/widget_bg_radius_ligth_yellow"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="@id/tv_amount_text"
            app:layout_constraintStart_toEndOf="@id/tv_amount_text"
            app:layout_constraintTop_toTopOf="@id/tv_amount_text" />

        <TextView
            android:id="@+id/tv_category_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_text" />

        <com.antang.myexpense.ui.widgets.SimpleTextGridView
            android:id="@+id/gv_expense_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:layout_marginEnd="@dimen/item_view_margin"
            android:background="@drawable/item_bg_strok_ligth_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/tv_category_text" />

        <RadioGroup
            android:id="@+id/rg_expense_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@+id/gv_expense_categories">

            <RadioButton
                android:id="@+id/rb_income"
                style="@style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/rb_outcome"
                android:checked="true"
                style="@style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outcome" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_account_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:text="@string/account"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/rg_expense_type" />

        <com.antang.myexpense.ui.widgets.SimpleTextGridView
            android:id="@+id/gv_accounts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:layout_marginEnd="@dimen/item_view_margin"
            android:background="@drawable/item_bg_strok_ligth_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/tv_account_text" />

        <TextView
            android:id="@+id/tv_tag_text"
            style="@style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/gv_accounts" />

        <com.antang.myexpense.ui.widgets.SimpleTextGridView
            android:id="@+id/gv_expense_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_view_margin"
            android:layout_marginEnd="@dimen/item_view_margin"
            android:background="@drawable/item_bg_strok_ligth_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_date_text"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>