<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_view_padding">

    <TextView
        android:id="@+id/tv_owner_text"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_owner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_owner"
        style="@style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/item_view_margin"
        android:background="@drawable/widget_bg_radius_ligth_yellow"
        app:layout_constraintBottom_toBottomOf="@id/tv_owner_text"
        app:layout_constraintStart_toEndOf="@id/tv_owner_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_owner_text" />

    <TextView
        android:id="@+id/tv_account_no_text"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_view_margin"
        android:text="@string/text_account_no"
        app:layout_constraintStart_toStartOf="@id/tv_owner_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_owner_text" />


    <EditText
        android:id="@+id/tv_account_no"
        style="@style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/item_view_margin"
        android:ems="10"
        android:inputType="numberSigned"
        android:background="@drawable/widget_bg_radius_ligth_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_account_no_text"
        app:layout_constraintStart_toEndOf="@id/tv_account_no_text"
        app:layout_constraintTop_toTopOf="@id/tv_account_no_text" />

    <TextView
        android:id="@+id/tv_account_display_name_text"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_view_margin"
        android:text="@string/text_account_display_name"
        app:layout_constraintStart_toStartOf="@id/tv_owner_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_no_text" />


    <EditText
        android:id="@+id/tv_account_display_name"
        style="@style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/item_view_margin"
        android:background="@drawable/widget_bg_radius_ligth_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_account_display_name_text"
        app:layout_constraintStart_toEndOf="@id/tv_account_display_name_text"
        app:layout_constraintTop_toTopOf="@id/tv_account_display_name_text" />

    <TextView
        android:id="@+id/tv_account_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_view_margin"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@id/tv_owner_text"
        app:layout_constraintTop_toBottomOf="@id/tv_account_display_name_text" />

    <com.antang.myexpense.ui.widgets.SimpleTextGridView
        android:id="@+id/gv_account_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_view_margin"
        android:layout_marginEnd="@dimen/item_view_margin"
        android:background="@drawable/item_bg_strok_ligth_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_owner_text"
        app:layout_constraintTop_toBottomOf="@id/tv_account_category_text" />
</androidx.constraintlayout.widget.ConstraintLayout>